--- a/backend/manifest2.json
+++ b/backend/manifest2.json
@@ -1,6 +1,6 @@
 {
   "@context": "http://iiif.io/api/presentation/3/context.json",
-  "id": "https://iiif.io/api/cookbook/recipe/0009-book-1/manifest.json",
+  "id": "http://localhost:6701/manifest",
   "type": "Manifest",
   "label": {
     "en": [
@@ -11,45 +11,6 @@
     "paged"
   ],
   "items": [
-    {
-      "id": "https://iiif.io/api/cookbook/recipe/0009-book-1/canvas/p1",
-      "type": "Canvas",
-      "label": {
-        "en": [
-          "Blank page"
-        ]
-      },
-      "height": 4613,
-      "width": 3204,
-      "items": [
-        {
-          "id": "https://iiif.io/api/cookbook/recipe/0009-book-1/page/p1/1",
-          "type": "AnnotationPage",
-          "items": [
-            {
-              "id": "https://iiif.io/api/cookbook/recipe/0009-book-1/annotation/p0001-image",
-              "type": "Annotation",
-              "motivation": "painting",
-              "body": {
-                "id": "https://iiif.io/api/image/3.0/example/reference/59d09e6773341f28ea166e9f3c1e674f-gallica_ark_12148_bpt6k1526005v_f18/full/max/0/default.jpg",
-                "type": "Image",
-                "format": "image/jpeg",
-                "height": 4613,
-                "width": 3204,
-                "service": [
-                  {
-                    "id": "https://iiif.io/api/image/3.0/example/reference/59d09e6773341f28ea166e9f3c1e674f-gallica_ark_12148_bpt6k1526005v_f18",
-                    "type": "ImageService3",
-                    "profile": "level1"
-                  }
-                ]
-              },
-              "target": "https://iiif.io/api/cookbook/recipe/0009-book-1/canvas/p1"
-            }
-          ]
-        }
-      ]
-    },
     {
       "id": "https://iiif.io/api/cookbook/recipe/0009-book-1/canvas/p2",
       "type": "Canvas",
@@ -70,16 +31,20 @@
               "type": "Annotation",
               "motivation": "painting",
               "body": {
-                "id": "https://iiif.io/api/image/3.0/example/reference/59d09e6773341f28ea166e9f3c1e674f-gallica_ark_12148_bpt6k1526005v_f19/full/max/0/default.jpg",
+                "id": "https://iiif.wellcomecollection.org/image/b20417081_001_0016.jp2/full/634,1024/0/default.jpg",
+                "@type": "oa:Annotation",
                 "type": "Image",
                 "format": "image/jpeg",
-                "width": 3186,
-                "height": 4612,
+                "width": 1024,
+                "height": 634,
                 "service": [
                   {
-                    "id": "https://iiif.io/api/image/3.0/example/reference/59d09e6773341f28ea166e9f3c1e674f-gallica_ark_12148_bpt6k1526005v_f19",
-                    "type": "ImageService3",
-                    "profile": "level1"
+                    "@context": "http://iiif.io/api/image/2/context.json",
+                    "@id": "https://iiif.wellcomecollection.org/image/b20417081_001_0016.jp2",
+                    "profile": "http://iiif.io/api/image/2/level1.json",
+                    "protocol": "http://iiif.io/api/image",
+                    "width": 2180,
+                    "height": 3520
                   }
                 ]
               },
@@ -87,122 +52,12 @@
             }
           ]
         }
-      ]
-    },
-    {
-      "id": "https://iiif.io/api/cookbook/recipe/0009-book-1/canvas/p3",
-      "type": "Canvas",
-      "label": {
-        "en": [
-          "Title page"
-        ]
-      },
-      "width": 3204,
-      "height": 4613,
-      "items": [
+      ],
+      "annotations": [
         {
-          "id": "https://iiif.io/api/cookbook/recipe/0009-book-1/page/p3/1",
-          "type": "AnnotationPage",
-          "items": [
-            {
-              "id": "https://iiif.io/api/cookbook/recipe/0009-book-1/annotation/p0003-image",
-              "type": "Annotation",
-              "motivation": "painting",
-              "body": {
-                "id": "https://iiif.io/api/image/3.0/example/reference/59d09e6773341f28ea166e9f3c1e674f-gallica_ark_12148_bpt6k1526005v_f20/full/max/0/default.jpg",
-                "type": "Image",
-                "format": "image/jpeg",
-                "width": 3204,
-                "height": 4613,
-                "service": [
-                  {
-                    "id": "https://iiif.io/api/image/3.0/example/reference/59d09e6773341f28ea166e9f3c1e674f-gallica_ark_12148_bpt6k1526005v_f20",
-                    "type": "ImageService3",
-                    "profile": "level1"
-                  }
-                ]
-              },
-              "target": "https://iiif.io/api/cookbook/recipe/0009-book-1/canvas/p3"
-            }
-          ]
-        }
-      ]
-    },
-    {
-      "id": "https://iiif.io/api/cookbook/recipe/0009-book-1/canvas/p4",
-      "type": "Canvas",
-      "label": {
-        "en": [
-          "Blank page"
-        ]
-      },
-      "width": 3174,
-      "height": 4578,
-      "items": [
-        {
-          "id": "https://iiif.io/api/cookbook/recipe/0009-book-1/page/p4/1",
-          "type": "AnnotationPage",
-          "items": [
-            {
-              "id": "https://iiif.io/api/cookbook/recipe/0009-book-1/annotation/p0004-image",
-              "type": "Annotation",
-              "motivation": "painting",
-              "body": {
-                "id": "https://iiif.io/api/image/3.0/example/reference/59d09e6773341f28ea166e9f3c1e674f-gallica_ark_12148_bpt6k1526005v_f21/full/max/0/default.jpg",
-                "type": "Image",
-                "format": "image/jpeg",
-                "width": 3174,
-                "height": 4578,
-                "service": [
-                  {
-                    "id": "https://iiif.io/api/image/3.0/example/reference/59d09e6773341f28ea166e9f3c1e674f-gallica_ark_12148_bpt6k1526005v_f21",
-                    "type": "ImageService3",
-                    "profile": "level1"
-                  }
-                ]
-              },
-              "target": "https://iiif.io/api/cookbook/recipe/0009-book-1/canvas/p4"
-            }
-          ]
-        }
-      ]
-    },
-    {
-      "id": "https://iiif.io/api/cookbook/recipe/0009-book-1/canvas/p5",
-      "type": "Canvas",
-      "label": {
-        "en": [
-          "Bookplate"
-        ]
-      },
-      "width": 3198,
-      "height": 4632,
-      "items": [
-        {
-          "id": "https://iiif.io/api/cookbook/recipe/0009-book-1/page/p5/1",
-          "type": "AnnotationPage",
-          "items": [
-            {
-              "id": "https://iiif.io/api/cookbook/recipe/0009-book-1/annotation/p0005-image",
-              "type": "Annotation",
-              "motivation": "painting",
-              "body": {
-                "id": "https://iiif.io/api/image/3.0/example/reference/59d09e6773341f28ea166e9f3c1e674f-gallica_ark_12148_bpt6k1526005v_f22/full/max/0/default.jpg",
-                "type": "Image",
-                "format": "image/jpeg",
-                "width": 3198,
-                "height": 4632,
-                "service": [
-                  {
-                    "id": "https://iiif.io/api/image/3.0/example/reference/59d09e6773341f28ea166e9f3c1e674f-gallica_ark_12148_bpt6k1526005v_f22",
-                    "type": "ImageService3",
-                    "profile": "level1"
-                  }
-                ]
-              },
-              "target": "https://iiif.io/api/cookbook/recipe/0009-book-1/canvas/p5"
-            }
-          ]
+          "@id": "https://iiif.wellcomecollection.org/annotations/v2/b20417081_001/b20417081_001_0016.jp2/line",
+          "@type": "sc:AnnotationList",
+          "label": "Text of page  -"
         }
       ]
     }
